<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_meter_detection</name>
  <version>0.0.1</version>
  <description>YOLO-based meter detection pipeline for ROS2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>

  <!-- Python依赖 -->
  <exec_depend>rknnlite</exec_depend>
  <exec_depend>skimage</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <!-- 添加这一行 -->
  <export>
   <build_type>ament_python</build_type>
  </export>

  <!-- 确保有这个构建依赖 -->
   <buildtool_depend>ament_cmake</buildtool_depend>
</package>
